# linked-data-repository-indexer

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: develop.yml  tests.yml
service/: __init__.py  configuration.ini  indexer.py  logging.ini  pyproject.toml  schema.py
service/utils/configuration/: log.py  main.py
tests/: test_indexer.py
