[tool.poetry]
name = "pytest"
version = "0.1.0"
description = ""
authors = ["thomasmastersmethods <tom.masters@gsscogs.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
